--- a/style.css
+++ b/style.css
@@ -22,23 +22,14 @@ button {
     height: 40px;
 }
 
-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.operation {
-    margin: auto 50px;
-    display: flex;
-    gap: 20px;
-    max-height: 100vh;
-}
-
-.operation p {
+section p {
     border: 2px solid black;
     height: 40px;
     width: 40px;
-    text-align: center;
-    padding-top: 6px;
+}
+
+.sort{
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
 }
