--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     height: 400px;
     width: 600px;
     display: grid;
-    gap: 10px;
     margin: 50px auto 50px;
     padding: 10px;
     font-size: 20px;
@@ -47,11 +46,19 @@ input {
     height: 40px;
     padding-left: 8px;
     width: 500px;
+    font-size: 18px;
 }
 
 button {
     width: 80px;
     height: 40px;
+}
+
+span {
+    font-size: 20px;
+    font-weight: bold;
+    color: red;
+
 }
 
 .container_operation {
